# api-client-python

./: .gitignore  LICENSE  Makefile  README.md  example.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  release.yml
energy_tracker_api/: __init__.py  client.py  exceptions.py  models.py  resources.py
energy_tracker_api/models/: __init__.py  common.py  devices.py  environments.py  meter_readings.py
energy_tracker_api/resources/: __init__.py  base.py  devices.py  environments.py  meter_readings.py
tests/: test_client.py  test_exceptions.py  test_models.py  test_resources.py  test_resources_devices.py  test_resources_environments.py
